re PR debug/44178 (-fcompare-debug failure with -O1 -fgcse -fsched-pressure -funroll-loops -fschedule-insns)

PR debug/44178
	* haifa-sched.c (initiate_bb_reg_pressure_info): Do not call
	setup_ref_regs for DEBUG_INSNs.

	* g++.dg/debug/pr44178.C: New test.

From-SVN: r159634